test/files/neg/t846.check
t846.scala:9: error: type mismatch;
 found   : Null(null)
 required: B
    if (a != null) f(a) else null
                             ^
1 error
